--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
     "main": "index.js",
     "scripts": {
         "test": "./node_modules/jest/bin/jest.js",
-        "test:watch": "npm test -- --watchAll"
+        "test:watch": "npm test -- --watchAll",
+        "lint": "./node_modules/eslint/bin/eslint.js .",
+        "lint:watch": "./node_modules/eslint-watch/bin/esw --watch --clear --changed --color"
     },
     "author": "D.Latheron",
     "license": "ISC",
     "devDependencies": {
+        "eslint": "^6.0.1",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.18.0",
+        "eslint-plugin-node": "^9.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "eslint-watch": "^5.1.2",
         "jest": "^24.8.0"
     }
 }
