--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "./node_modules/jest/bin/jest.js",
         "test:watch": "npm test -- --watchAll",
+        "test:coverage": "npm test -- --coverage",
         "lint": "./node_modules/eslint/bin/eslint.js .",
         "lint:watch": "./node_modules/eslint-watch/bin/esw --watch --clear --changed --color"
     },
