--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,16 +6,31 @@
     "configurations": [
         {
             "type": "node",
-            "name": "Debug Tests",
+            "name": "Jest All",
             "request": "launch",
+            "program": "${workspaceFolder}/node_modules/jest/bin/jest",
             "args": [
-                "--runInBand"
+                "--runInBand",
+                "--config", "jest.config.js"
             ],
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
-            "internalConsoleOptions": "openOnSessionStart",
-            "disableOptimisticBPs": true,
-            "program": "${workspaceFolder}/node_modules/jest/bin/jest"
-        }
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true
+        },
+        {
+            "type": "node",
+            "name": "Jest Current File",
+            "request": "launch",
+            "program": "${workspaceFolder}/node_modules/jest/bin/jest",
+            "args": [
+                "${fileBasenameNoExtension}",
+                "--config", "jest.config.js"
+            ],
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true
+        },
     ]
 }
