--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     },
     "author": "D.Latheron",
     "license": "ISC",
+    "dependencies": {
+        "lodash": "^4.17.15"
+    },
     "devDependencies": {
         "eslint": "^6.0.1",
         "eslint-config-standard": "^12.0.0",
